--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,21 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header class="container d-flex justify-content-center text-primary">
+      <h4 class="py-2">Alfa Consulting Firm</h4>
+    </header>
+    
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+    <footer class="container d-flex text-white py-2">
+      <p>
+        Made by Vicente Blat following this 
+        <a href="https://bit.ly/2NPxws3">LinkedIn Learning Tutorial</a>.
+      </p>
+      <!-- col-md-6 -->
+    </footer>
+    <!-- footer -->
   </body>
 </html>
+
+
