Change page color

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header class="container d-flex justify-content-center text-primary">
+    <header class="container d-flex justify-content-center text-white">
       <h4 class="py-2">Alfa Consulting Firm</h4>
     </header>
     
